welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:31: error: not found: value testCouleur
  testCouleur = getCouleurSol()
  ^SlugSnail:33: error: not found: value testCouleur
 	if (testCouleur == couleur)
            ^